--- a/function_code/UI/ePI-Portal/package.json
+++ b/function_code/UI/ePI-Portal/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.0.1",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^5.0.1",
+    "guid-typescript": "^1.0.9",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
