--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
+
 {
     "python.pythonPath": "C:\\Users\\vipsharm\\AppData\\Local\\Continuum\\anaconda3\\envs\\py38\\python.exe",
-    "azureFunctions.deploySubpath": "function_code\\azureFunctions\\documentParserFunction",
+    "azureFunctions.deploySubpath": "conversion\\azureFunctions\\documentParserFunction",
     "azureFunctions.scmDoBuildDuringDeployment": true,
     "azureFunctions.pythonVenv": ".venv",
     "azureFunctions.projectLanguage": "Python",
