Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,9 @@ stages:
     - task: PowerShell@2
       inputs:
         targetType: 'inline'
-        script: 'python setup.py sdist bdist_wheel'
+        script: |
+          pip install wheel
+          python setup.py sdist bdist_wheel
         workingDirectory: 'conversion/code'
 
     - task: PythonScript@0
