--- a/conversion/azureFunctions/documentParserFunction/requirements.txt
+++ b/conversion/azureFunctions/documentParserFunction/requirements.txt
@@ -3,4 +3,4 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions
-wheelhouse/code-20210729.post3717-py3-none-any.whl
+wheelhouse/code-modules.post-py3-none-any.whl
