--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ function_code/testWork/testDoc.txt
 function_code/testWork/testDoc.txt
 *.pyc
 conversion/code/.venv/
+**/*-checkpoint.ipynb_checkpoints
